--- a/css/_variables.css
+++ b/css/_variables.css
@@ -5,5 +5,14 @@
     color definitions
 */
 /*
+	sizes
+*/
+/*$colBackgroundTransparent: rgba(255, 255, 240, 0.75);
+$colLight: #d6dbd6; //#dde1e6; //#c9d9e8;
+$colMiddle: #789; //#789;
+$colDark: black; //#3e3e3b; //#60605a;
+$colTextLight: white;
+$colTextDark: black;*/
+/*
 	other variables
 */
