--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -15,19 +15,34 @@
     color definitions
 */
 
-$colBackground: ivory;
-$colBackgroundTransparent: rgba(255, 255, 240, 0.75);
+$colBackground: #aaa;
+$colForeground: ivory;
+$colHeaderBackground: #666;
+$colLink: #789;
+$colTextLight: #fff;
+$colTextDark: #000;
+
+/*
+	sizes
+*/
+
+$padding: 2em;
+$widthRelative: 50%;
+$widthAbsolute: 960px;
+
+/*$colBackgroundTransparent: rgba(255, 255, 240, 0.75);
 $colLight: #d6dbd6; //#dde1e6; //#c9d9e8;
 $colMiddle: #789; //#789;
 $colDark: black; //#3e3e3b; //#60605a;
 $colTextLight: white;
-$colTextDark: black;
+$colTextDark: black;*/
 
 
 /*
 	other variables
 */
 
-$fontName: "Open Sans"; 
-//$fontName: "Inconsolata";
-$logoHeight: 20%;
+//$fontName: "EB Garamond";
+//$fontName: "Open Sans"; 
+$fontName: "Inconsolata";
+//$logoHeight: 20%;
