--- a/_includes/tagCloud.html
+++ b/_includes/tagCloud.html
@@ -11,7 +11,7 @@
 
 
 {% assign tagList = site.tags %}
-{% capture tagNames %}{% for tag in tagList %}{{ tag | first }}{% unless forloop.last %},{% endunless %}{% endfor %}{% endcapture %}
+{% capture tagNames %}{% for tag in tagList %}{{ tag[0] }}{% unless forloop.last %},{% endunless %}{% endfor %}{% endcapture %}
 {% assign tagWords = tagNames | split:',' | sort %}
 
 
@@ -20,10 +20,14 @@
 	{% assign item = site.tags[tag] %}
 	{% assign itemCount = 0 %}
 	{% for post in item %}
-	{% assign category = post.url | truncate: 3, "" | remove: "/" %}
-	{% if category == locale %}{% assign itemCount = itemCount | plus: 1 %}{% endif %}
-	{% endfor %}
+		{% assign category = post.url | truncate: 3, "" | remove: "/" %}
+		{% if category == locale %}
+			{% assign itemCount = itemCount | plus: 1 %}
+		{% endif %}
+	{% endfor %}	
 	{% assign tagCounts = tagCounts | append: itemCount %}
+	{% assign taging.name = taging.name | append: tag %}
+	{% assign taging.cnt = taging.cnt | append: itemCount %}
 	{% unless forloop.last %}{% assign tagCounts = tagCounts | append: ',' %}{% endunless %}
 {% endfor %}
 {% assign tagCounts = tagCounts | split:',' %}
@@ -42,37 +46,14 @@
 	{% capture tagString %}
 	{% for tag in tagWords %}
 	{% assign count = tagCounts[forloop.index] %}
-	{% if count != "0" %}<a href="#tag_{{ tag | cgi_escape }}">{{ tag }}</a><span class="super">({{ count }})</span>&nbsp;{% endif %}
+	{% if count != "0" %}	
+	<a class="tag" title="{{ count }} {{ site.data.i18n[locale].articles }}" href="#tag_{{ tag | cgi_escape }}">
+		{{ tag }}
+	</a>
+	{% endif %}
 	{% endfor %}	
 	{% endcapture %}
 	{{ tagString }}
 </p>
-
-<ul class="no_bullet">
-{% for tag in tagWords %}	
-	{% if tagCounts[forloop.index] != "0" %}
-	<li><a class="anchor" id="tag_{{ tag | cgi_escape }}"><em>{{ tag }}:</em></a>
-		<ul class="no_bullet">
-			{% assign tagStruct = tagList[tag] %}
-			{% for post in tagStruct %}
-
-			{% assign category = post.url | truncate: 3, "" | remove: "/" %}
-
-			{% if category == locale %}
-			{% if locale == "de" %}
-			{% assign date = post.date | date: '%d.%m.%Y' %}
-			{% else %}
-			{% assign date = post.date | date: '%d/%m/%Y' %}
-			{% endif %}				
-			<li class="indent">												
-				<a href="{{ post.url }}">{{ post.title }}</a> ({{ date }})
-			</li>
-			{% endif %}
-			{% endfor %}
-		</ul>
-	</li>
-	{% endif %}
-{% endfor %}
-</ul>
 
 {% endif %}
