--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@import url(http://fonts.googleapis.com/css?family=EB+Garamond);
 /* 
 	html5doctor.com Reset v1.6.1 (http://html5doctor.com/html-5-reset-stylesheet/) - http://cssreset.com 
 */
@@ -66,6 +67,115 @@ input, select {
   vertical-align: middle; }
 
 /*
+    mixins
+*/
+/*
+    color definitions
+*/
+/*
+	sizes
+*/
+/*$colBackgroundTransparent: rgba(255, 255, 240, 0.75);
+$colLight: #d6dbd6; //#dde1e6; //#c9d9e8;
+$colMiddle: #789; //#789;
+$colDark: black; //#3e3e3b; //#60605a;
+$colTextLight: white;
+$colTextDark: black;*/
+/*
+	other variables
+*/
+#homeLink {
+  color: white;
+  border: none; }
+
+a {
+  border-bottom: 1px dotted lightslategrey;
+  color: lightslategrey;
+  text-decoration: none; }
+
+a[href^="http"]:after {
+  content: "\f442";
+  font-family: "Genericons";
+  vertical-align: bottom; }
+
+a:hover {
+  border-bottom: 1px solid lightslategrey; }
+
+a.tag {
+  background-color: #aaaaaa;
+  border: none;
+  color: white;
+  display: inline-block;
+  float: left;
+  font-size: 0.75em;
+  margin-bottom: 0.25em;
+  margin-left: 0em;
+  margin-right: 0.25em;
+  padding: 0.25em 0.5em; }
+
+address {
+  font-style: normal; }
+
+em {
+  font-weight: bold;
+  font-style: normal; }
+
+h1 {
+  display: block;
+  font-size: 1.5em;
+  font-weight: bold;
+  margin-bottom: 0.75em;
+  margin-top: 1.5em; }
+
+h2 {
+  display: block;
+  font-size: 1em;
+  font-weight: bold;
+  margin-bottom: 0.75em;
+  margin-top: 1.5em; }
+
+h1:first-child, h2:first-child {
+  margin-top: 0em; }
+
+img {
+  display: block;
+  margin: 1em auto;
+  max-width: 100%; }
+
+p {
+  margin-bottom: 1em; }
+
+ul {
+  margin-left: 1em;
+  margin-top: 0.75em; }
+  ul li {
+    line-height: 1.5em; }
+
+ul.noBullet {
+  list-style: none;
+  margin-left: 0em; }
+
+.aperture {
+  border: 1px solid black;
+  -ms-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -o-border-radius: 50%;
+  -webkit-border-radius: 50%;
+  border-radius: 50%; }
+
+.centerInLayout {
+  margin: 0 auto;
+  min-width: 960px;
+  width: 50%; }
+
+.right {
+  text-align: right; }
+
+.symbol {
+  font-family: "Genericons";
+  vertical-align: middle; }
+
+/*
 	webfonts
 */
 /*
@@ -107,187 +217,6 @@ input, select {
   font-style: normal; }
 
 /*
-    mixins
-*/
-/*
-    color definitions
-*/
-/*
-	other variables
-*/
-.anchor {
-  border: none;
-  color: black;
-  font-weight: bold; }
-  .anchor:hover {
-    border: none; }
-
-.aperture {
-  -ms-border-radius: 50%;
-  -moz-border-radius: 50%;
-  -o-border-radius: 50%;
-  -webkit-border-radius: 50%;
-  border-radius: 50%; }
-
-.bold {
-  font-weight: bold; }
-
-.center {
-  text-align: center; }
-
-.centerer {
-  margin: 0 auto;
-  position: relative;
-  width: 100%;
-  max-width: 960px; }
-
-.disabled {
-  opacity: 0.25; }
-
-.huge {
-  font-size: 3em; }
-
-.indent {
-  margin-left: 2em; }
-
-.left {
-  float: left; }
-
-.narrow {
-  margin-left: 5em !important; }
-
-.normal {
-  font-weight: normal !important; }
-
-.right {
-  float: right !important; }
-
-.spacer {
-  display: block;
-  width: 100%;
-  height: 1em; }
-
-.stripe {
-  background-color: lightslategrey;
-  display: block;
-  width: 100%; }
-
-.super {
-  font-size: 0.75em;
-  vertical-align: super; }
-
-.symbol {
-  font-family: Genericons;
-  padding-right: 0.5em;
-  vertical-align: middle; }
-
-.white_link {
-  border-bottom: 1px dotted white;
-  color: white; }
-  .white_link:hover {
-    border-bottom: 1px solid white; }
-
-a {
-  border-bottom: 1px dotted lightslategrey;
-  color: lightslategrey;
-  font-weight: bold;
-  text-decoration: none; }
-  a:hover {
-    border-bottom: 1px solid lightslategrey; }
-
-a[href^="http"]:after {
-  content: "\f442";
-  font-family: Genericons;
-  vertical-align: bottom; }
-
-address {
-  font-style: normal;
-  line-height: 1.5em;
-  margin-bottom: 1em; }
-
-em {
-  font-style: normal;
-  font-weight: bold; }
-
-h1 {
-  display: block;
-  font-size: 1.5em;
-  font-weight: bold;
-  margin-bottom: 0.67em;
-  margin-top: 1.33em; }
-
-h1:first-child {
-  margin-top: 0; }
-
-h2 {
-  font-size: 1em;
-  font-weight: bold;
-  margin-bottom: 1em; }
-
-img {
-  display: block;
-  margin: 2em auto;
-  max-width: 100%; }
-
-img.left {
-  display: block;
-  float: left;
-  margin-right: 1em;
-  margin-bottom: 0.5em; }
-
-object {
-  -ms-box-shadow: 0 0 1em black;
-  -moz-box-shadow: 0 0 1em black;
-  -o-box-shadow: 0 0 1em black;
-  -webkit-box-shadow: 0 0 1em black;
-  box-shadow: 0 0 1em black;
-  display: block;
-  margin: 2em auto;
-  max-width: 100%; }
-
-p {
-  line-height: 1.5em;
-  margin-bottom: 1em; }
-
-small {
-  font-size: 0.833em; }
-
-main code {
-  background-color: #eef;
-  border: 1px solid black;
-  padding: 0 0.2em; }
-main .highlight code {
-  background-color: transparent; }
-main table {
-  margin: 2em auto 2em;
-  text-align: center; }
-  main table td, main table th {
-    border: 2px solid ivory;
-    padding: 0.5em; }
-  main table th {
-    font-weight: bold; }
-  main table tr:nth-child(even) {
-    background-color: #d6dbd6; }
-  main table tr:nth-child(odd) {
-    background-color: lightslategrey; }
-
-ol, ul {
-  margin-left: 1.5em;
-  margin-bottom: 1em; }
-  ol li, ul li {
-    line-height: 1.5em;
-    margin-bottom: 0.5em; }
-    ol li:last-child, ul li:last-child {
-      margin-bottom: 0; }
-
-ul.no_bullet {
-  list-style: none;
-  margin-left: 0; }
-  ul.no_bullet .headline {
-    display: block;
-    margin-left: 7em; }
-
-/*
     ===============================
     basic layout and style settings
     ===============================
@@ -298,208 +227,82 @@ ul.no_bullet {
   -o-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  font-family: "Open Sans", sans-serif;
+  font-family: "Inconsolata", sans-serif;
   font-weight: normal;
+  margin: 0;
+  padding: 0;
   word-wrap: break-word; }
 
 body, html {
   height: 100%; }
 
 body {
-  background-color: ivory;
+  background-color: #aaaaaa;
+  color: black;
   display: block;
-  font-size: 11pt;
+  font-size: 12pt;
   overflow-y: scroll;
-  width: 100%;
-  min-width: 300px; }
+  width: 100%; }
 
 /*
-    =============================
-    customization of section tags
-    =============================
+    ==========
+    basic tags
+    ==========
 */
-aside {
-  background-color: #d6dbd6;
+#container {
+  background-color: transparent;
   display: block;
-  padding: 0.5em 1em;
-  margin-top: 0.25em;
-  margin-bottom: 1em;
-  margin-right: 1.5em;
-  width: 100%;
-  max-width: 300px; }
-  aside img {
-    margin: 0 auto; }
+  line-height: 1.2em;
+  margin: 0 auto;
+  margin-bottom: 2em;
+  min-width: 960px;
+  width: 50%;
+  padding-bottom: 6em; }
+
+#container:after {
+  clear: both;
+  content: "";
+  display: block; }
+
+#wrap {
+  min-height: 100%; }
+
+aside {
+  border-left: 2em solid #aaaaaa;
+  background-color: ivory;
+  float: right;
+  padding: 2em;
+  width: 40%; }
 
 footer {
+  background-color: #666666;
   color: white;
-  line-height: 2.5em;
-  margin: 0 auto;
-  margin-bottom: 1em;
-  max-width: 960px;
-  padding-left: 2em;
-  padding-right: 2em;
-  width: 100%; }
-  footer span.nav_item {
-    background-color: lightslategrey;
-    border-left: 1px solid ivory;
-    border-right: 1px solid ivory;
-    color: white;
-    cursor: pointer;
-    display: inline-block;
-    font-weight: bold;
-    height: 2.5em;
-    line-height: 2.5em;
-    padding-left: 1em;
-    padding-right: 1em;
-    text-align: center; }
-    footer span.nav_item:hover {
-      background-color: #d6dbd6 !important;
-      color: black; }
-  footer span.symbol {
-    padding-right: 0 !important; }
-  footer:after {
-    clear: both;
-    content: "";
-    display: block; }
+  display: block;
+  font-size: 1em;
+  line-height: 6em;
+  margin-top: -6em; }
 
 header {
-  padding-top: 20%;
-  position: relative;
-  top: -1px;
-  -ms-transition: none 0.5s;
-  -moz-transition: none 0.5s;
-  -o-transition: none 0.5s;
-  -webkit-transition: none 0.5s;
-  transition: none 0.5s;
-  width: 100%; }
-  header input {
-    display: none; }
-  header table {
-    position: absolute;
-    top: 0;
-    width: 100%; }
-    header table td {
-      background-repeat: no-repeat;
-      background-position: center;
-      background-size: cover;
-      padding-top: 10%; }
-    header table #a {
-      background-image: url("/media/banner/01.jpg");
-      width: 16%; }
-    header table #b {
-      background-image: url("/media/banner/02.jpg");
-      width: 16%; }
-    header table #c {
-      background-image: url("/media/banner/03.jpg");
-      width: 18%; }
-    header table #d {
-      background-image: url("/media/banner/04.jpg");
-      width: 32%; }
-    header table #e {
-      background-image: url("/media/banner/05.jpg");
-      width: 18%; }
-    header table #f {
-      background-image: url("/media/banner/06.jpg");
-      width: 16%; }
-    header table #g {
-      background-image: url("/media/banner/07.jpg");
-      width: 16%; }
-  header #de {
-    margin-left: -6em; }
-  header #en {
-    margin-left: 3em; }
-
-#header_switch {
-  display: none; }
-
-#header_switch:checked + header {
-  margin-top: -20%; }
-
-#header_switch:checked + header + nav {
-  border-top: none; }
+  background-color: #666666;
+  color: white;
+  display: block;
+  font-size: 2em;
+  line-height: 3em;
+  margin-bottom: 1em; }
 
 main {
-  margin: 2em; }
+  background-color: ivory;
+  display: inline-block;
+  padding: 2em;
+  width: 60%; }
 
 nav {
-  background-color: lightslategrey;
-  display: block;
-  position: relative;
-  margin: 0 auto;
-  width: 100%;
-  max-width: 960px;
-  padding-left: 2em;
-  padding-right: 2em; }
-  nav input {
-    display: none; }
-  nav input[id^="entry"]:checked + label span,
-  nav input[id="menu_switch"]:checked + label span {
-    background-color: #d6dbd6;
-    color: black; }
-  nav input[id="menu_switch"]:checked + label + #menu {
-    background-color: rgba(255, 255, 240, 0.75);
-    border-top: 1px solid transparent;
-    display: block;
-    left: 2em;
-    position: absolute;
-    top: 2.5em;
-    z-index: 11; }
-    nav input[id="menu_switch"]:checked + label + #menu label:last-child span.nav_item {
-      margin-bottom: 0; }
-    nav input[id="menu_switch"]:checked + label + #menu span.nav_item {
-      border: none;
-      display: block;
-      float: none !important;
-      margin-bottom: 1px; }
-  nav input[id="settings_switch"]:checked + label span {
-    background-color: #d6dbd6;
-    color: black; }
-  nav input[id="settings_switch"]:checked + label + #settings_menu {
-    display: block; }
-  nav #menu_button {
-    display: none; }
-  nav #settings_menu {
-    background-color: rgba(255, 255, 240, 0.75);
-    border-top: 1px solid transparent;
-    display: none;
-    position: absolute;
-    right: 2em;
-    top: 2.5em;
-    z-index: 10; }
-    nav #settings_menu span.nav_item {
-      background-color: lightslategrey;
-      border: none;
-      display: block;
-      float: none !important;
-      margin-bottom: 1px; }
-  nav span.nav_item {
-    background-color: lightslategrey;
-    border-left: 1px solid ivory;
+  float: right;
+  font-size: 0.5em; }
+  nav a {
+    border-bottom: 1px dotted white;
     color: white;
-    cursor: pointer;
-    display: inline-block;
-    font-weight: bold;
-    float: left;
-    height: 2.5em;
-    line-height: 2.5em;
-    padding-left: 1em;
-    padding-right: 1em;
-    text-align: center; }
-    nav span.nav_item:hover {
-      background-color: #d6dbd6 !important;
-      color: black; }
-  nav label[for^="entry"]:last-child span.nav_item,
-  nav label[for^="menu_switch"] span.nav_item,
-  nav label[for^="settings_switch"] span.nav_item {
-    border-right: 1px solid ivory; }
-  nav:after {
-    clear: both;
-    content: "";
-    display: block; }
-
-@media (max-width: 640px) {
-  #menu_button {
-    display: block !important; }
-
-  #menu {
-    display: none; } }
+    margin-left: 1em;
+    text-decoration: none; }
+  nav a:hover {
+    border-bottom: 1px solid white; }
