--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -1,4 +1,4 @@
-{% assign data = site.data.i18n["de"].short_profile %}
+{% assign data = site.data.i18n[include.lang].short_profile %}
 
 <img alt="Portrait von Michael Schaefer" class="aperture" src="/media/portrait_square.png" />
 <h2>{{ data.headline }}</h2>
@@ -14,7 +14,12 @@
 	{% endfor %}		
 </ul>
 
+<h2>{{ site.data.i18n[include.lang]['navigation'][1].text }}</h2>
+<p>
+	{% include archive.html lang=include.lang %}
+</p>
+
 <h2>Tags</h2>
 <p>
-	{% include tagCloud.html %}
+	{% include tagCloud.html lang=include.lang %}
 </p>
