--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,6 @@
 {% capture locale %}{{ page.url | truncate: 3, "" | remove: "/" }}{% endcapture %}
 {% unless site.authorized_locales contains locale %}
-{% assign locale = site.default_locale %}
+  {% assign locale = site.default_locale %}
 {% endunless %}
 
 <!DOCTYPE html>
@@ -9,7 +9,7 @@
   <meta charset="utf-8">
   <!--<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">-->
   <title>
-    {{ site.name }}{% if page.title %}&nbsp;||&nbsp;{% if page.type == nil %}{{ site.data.i18n[locale].type_article }}&nbsp;{% endif %}{{ page.title }}{% endif %}
+    {{ site.name }}{% if page.title %}&nbsp;||&nbsp;{% if page.type == nil %}{{ site.data.i18n[locale]['strings'].type_article }}&nbsp;({{ page.title }}){% elsif page.type == 'tag' %}Tag ({{ page.title }}){% else %}{{ page.title }}{% endif %}{% endif %}
   </title>
   <meta name="viewport" content="width=device-width, initial-scale=1">  
 
@@ -30,8 +30,8 @@
 
 <div id="wrap">     
   <header>    
-    <div class="centerInLayout">
-    <a id="homeLink" href="/">www.michael-schaefer.org</a>
+    <div class="centerInLayout">    
+    <a id="homeLink" href="/{% if locale != "de" %}{{ locale }}/{% endif %}">www.michael-schaefer.org</a>
       <nav>
         {% if locale == "de" %}
         <a href="/en/">English version</a>
@@ -50,7 +50,7 @@
     </main>    
 
     <aside>
-      {% include aside.html %}
+      {% include aside.html lang=locale %}
     </aside>           
   </div>    
 </div>
