--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,33 +4,40 @@ layout: default
 
 {% capture locale %}{{ page.url | truncate: 3, "" | remove: "/" }}{% endcapture %}
 {% unless site.authorized_locales contains locale %}
-{% assign locale = site.default_locale %}
+    {% assign locale = site.default_locale %}
 {% endunless %}
 
+
+{% comment %} assign subdir string for links {% endcomment %}
 {% if locale == "de" %}
-{% assign date = page.date | date: '%d.%m.%Y' %}
-{% assign subdir = "" %}
+    {% assign subdir = "" %}
 {% else %}
-{% assign date = page.date | date: '%d/%m/%Y' %}
-{% capture subdir %}/{{ locale }}{% endcapture %}
+    {% capture subdir %}/{{ locale }}{% endcapture %}
 {% endif %}
 
+
+{% comment %} assign tag string {% endcomment %}
 {% if page.tags.size == 0 %}
-{% assign tagList = site.data.i18n[locale].no_tags_for_article %}
+    {% assign tagList = site.data.i18n[locale].no_tags_for_article %}
 {% else %}
-{% capture tagList %}{% for tag in page.tags %}, <a href="{{ subdir }}/tags/#{{ tag | cgi_escape }}">{{ tag }}</a>{% endfor %}{% endcapture %}
+    {% capture tagList %}{% for tag in page.tags %}, <a href="{{ subdir }}/tags/{{ tag | downcase | cgi_escape }}/">{{ tag | downcase }}</a>{% endfor %}{% endcapture %}
 {% endif %}
 
+
+{% comment %} build article {% endcomment %}
 <article>
 	<h1>{{ page.title }}</h1>
 	<p>		
-		<span class="symbol">&#xf307;</span><span class="date">{{ date }}</span><br/>
+		<span class="symbol">&#xf307;</span><span class="date">{{ page.date | date: site.data.i18n[locale]['strings'].date_format }}</span><br/>
 		<span class="symbol">&#xf302;</span>{{ tagList | remove_first: ', ' }}
 	</p>
 	
 	{{ content }}		
 </article>
 
+
+{% comment %} build disqus area {% endcomment %}
+<article>
 <div id="disqus_thread"></div>
 <script type="text/javascript">
     var disqus_shortname = 'michaelschaeferorg';
@@ -45,3 +52,4 @@ layout: default
 </script>
 <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+</article>
