--- a/css/_tags.scss
+++ b/css/_tags.scss
@@ -6,6 +6,7 @@
 a {
 	border-bottom: 1px dotted $colLink;
 	color: $colLink;
+	font-weight: bold;
 	text-decoration: none;
 }
 
@@ -30,6 +31,10 @@ a.tag {
 	margin-left: 0em;
 	margin-right: 0.25em;
 	padding: 0.25em 0.5em;
+
+	&:hover {
+		background-color: $colLink;
+	}
 }
 
 address {
@@ -69,13 +74,148 @@ p {
 	margin-bottom: 1em;
 }
 
+table {
+	margin: 2em auto 2em;
+	text-align: center;
+
+	td, th {
+		border: 2px solid $colForeground;
+		padding: 0.5em;
+	}
+
+	th {
+		font-weight: bold;
+	}
+
+	tr:nth-child(even) {
+		background-color: $colTableLight;
+	}
+
+	tr:nth-child(odd) {
+		background-color: $colTableDark;
+	}
+
+	border-collapse: collapse;
+	border-spacing: 0em;
+}
+
 ul {
-	margin-left: 1em;
+	margin-left: 1.5em;
 	margin-top: 0.75em;
+	margin-bottom: 0.75em;
 
 	li {
 		line-height: 1.5em;
 	}
+}
+
+#dropDown {		
+	position: relative;	
+
+	#dropDownSwitch + ul { display: none; }
+	#dropDownSwitch:checked + ul { display: block; }
+
+	a {
+		border: none;
+		color: $colTextDark;		
+		font-weight: normal;
+	}
+
+	input { display: none; }
+
+	label {
+		border: 1px solid black;				
+		cursor: pointer;
+		display: block;
+		padding: 0em 0.25em;
+		width: 100%;
+
+		span {
+			float: right;
+		}		
+	}
+
+	li {
+		cursor: pointer;
+		display: block;
+		padding: 0em 0.25em;
+
+		&:hover {
+			background-color: $colBackground;
+		}
+	}		
+
+	ul {
+		background-color: $colForeground;
+		border: 1px solid black;
+		list-style: none;
+		margin: 0em;
+		margin-top: 0.125em;								
+		max-height: 7.5em;
+		overflow-y: scroll;
+		position: absolute;
+		width: 100%;		
+	}
+
+	/*ul {
+		background-color: $colForeground;
+		border: 1px solid black;
+		list-style: none;
+		margin-left: 0em;
+		margin-top: 0em;
+		max-height: 10em;
+		overflow-y: scroll;
+		position: absolute;
+		width: 100%;
+
+		a {
+			border: none;
+			color: $colTextDark;
+			font-weight: normal;
+		}
+
+		label, li {
+			cursor: pointer;
+		}
+
+		li {
+			display: block;
+			padding: 0.125em;
+			padding: 0em 0.5em;
+			width: 100%;
+		}	
+
+		li:first-child:after {
+			content: "\f431";
+			float: right;
+			font-family: "Genericons";
+			vertical-align: bottom;
+		}
+
+		li:hover {
+
+		}
+
+		#dropDownSwitch {
+			display: none;
+		}
+
+		#dropDownSwitch ~ li {
+			display: none;
+		}	
+
+		#dropDownSwitch:checked ~ li {
+			display: block;		
+
+			&:hover {
+				background-color: $colBackground;
+			}
+		}
+
+		#dropDownSwitch:checked + li {
+			border-top: 1px dotted black;
+		}
+	}*/
 }
 
 ul.noBullet {
